--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
+title: Myrna Acuna # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  My name is Myrna Acuna and  I am an information technology professional with demonstrated success in IT Support roles, Cyber Security Governance, Audit, Compliance, and Risk Management. I am looking forward to offering creativity and critical thinking skills to help generate innovative ideas and gain industry experience.  
   <br><br>
-  Second description 
+  I am currently pursuing my Masters in Data Science from Bellevue University. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/paulinaacuna/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+#google_analytics: UA-000000-0 # your Google Analytics tracking ID here
