--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Myrna Acuna # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+#logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/profile.jfif" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My name is Myrna Acuna and  I am an information technology professional with demonstrated success in IT Support roles, Cyber Security Governance, Audit, Compliance, and Risk Management. I am looking forward to offering creativity and critical thinking skills to help generate innovative ideas and gain industry experience.  
   <br><br>
